--- a/.github/workflows/auto-book.yml
+++ b/.github/workflows/auto-book.yml
@@ -2,7 +2,7 @@ name: Auto Book CrossFit
 
 on:
   schedule:
-    - cron: "5 0 * * 2,4" # Každý utorok a štvrtok o 00:05 CET
+    - cron: "21 21 * * *"
   workflow_dispatch: # Umožní manuálne spustenie
 
 jobs:
