--- a/.github/workflows/auto-book.yml
+++ b/.github/workflows/auto-book.yml
@@ -2,7 +2,7 @@ name: Auto Book CrossFit
 
 on:
   schedule:
-    - cron: "21 21 * * *"
+    - cron: "5 23 * * 2,4"  # Každý utorok a štvrtok o 00:05 CET (23:05 UTC)
   workflow_dispatch: # Umožní manuálne spustenie
 
 jobs:
