fix error - register to the latest possible training

--- a/.github/workflows/auto-book.yml
+++ b/.github/workflows/auto-book.yml
@@ -29,9 +29,9 @@ jobs:
           USER_NAME: ${{ secrets.USER_NAME }}
           USER_EMAIL: ${{ secrets.USER_EMAIL }}
 
-      - name: Upload debug screenshots on failure
-        if: failure()
+      - name: Upload debug screenshots
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: debug-screenshots
+          name: screenshots
           path: screenshots/
