added variables from secrets into env in CI/CD pipe

--- a/.github/workflows/auto-book.yml
+++ b/.github/workflows/auto-book.yml
@@ -28,6 +28,8 @@ jobs:
         env:
           USER_NAME: ${{ secrets.USER_NAME }}
           USER_EMAIL: ${{ secrets.USER_EMAIL }}
+          EXTRA_NAME: ${{ secrets.EXTRA_NAME }}
+          EXTRA_EMAIL: ${{ secrets.EXTRA_EMAIL }}
 
       - name: Upload debug screenshots
         if: always()
